fix spacing issues on blog card

--- a/src/App.css
+++ b/src/App.css
@@ -70,10 +70,10 @@
   height: 40px;
   display: flex;
   flex-direction: row;
+  margin: 0px;
   padding-left: 5px;
   padding-right: 5px;
   overflow: hidden;
-  /* background-color: seagreen; */
 }
 
 .poster-image {
@@ -88,11 +88,15 @@
   height: 40px;
 }
 
-.ellipsis {
-  content: "\22EE";
-  width: 40px;
+.ellipsis-button {
+  width: 35px;
   height: 40px;
-  object-fit: fill;
+  background-color: '#00000000';
+}
+
+.ellipsis {
+  width: 35px;
+  height: 40px;
   color: #999999;
 }
 
@@ -101,7 +105,7 @@
   height: 90px;
   padding-left: 5px;
   padding-right: 5px;
-  /* background-color: #61dafb; */
+  margin: 0px;
 }
 
 .card-title {
@@ -109,6 +113,7 @@
   text-align: left;
   vertical-align: text-top;
   font-size: x-large;
+  margin: 0px;
   color: #ffffff;
 }
 
@@ -116,19 +121,19 @@
   width: 100%;
   height: 20px;
   padding-left: 10px;
-  /* background-color: blue; */
 }
 
 .read-time {
   height: 100%;
   text-align: left;
   overflow: hidden;
+  margin: 0px;
   color: #9b9b9b;
 }
 
 .card-image-container {
   width: 100%;
-  height: 150px;
+  height: 170px;
 }
 
 .card-image {
@@ -140,5 +145,5 @@
 
 .card-footer {
   width: 100%;
-  height: 50px;
+  height: 40px;
 }
